# netbox-plugin-apbr

./: .gitignore  README.md  pyproject.toml  setup.py
apbr/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
apbr/api/: serializers.py  urls.py  views.py
apbr/migrations/: 0001_initial.py  0002_auto_20211129_1301.py  0003_alter_apbr_options.py  0004_auto_20211202_1609.py
apbr/templates/apbr/: apbr.html  apbr_list.html  profile.html
