[tool.poetry]
name = "juniper-apbr"
version = "0.0.1"
description = "Juniper Advanced Policy-Based Routing plugin for Netbox"
authors = ["Calvin Remsburg"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
